minor fix for footer on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -54,7 +54,7 @@ body {
   }
 
   #footer-icon-box {
-    width: 50% !important;
+    width: 75% !important;
   }
 
   #services-box, .services-img {
